# loggle

./: .gitignore  Makefile  README.md  loggers.json  pyproject.toml
.github/workflows/: mypy.yml  pypi.yml
app/: __main__.py  app_logging.py  config.py
lib/: __init__.py  logger.py  main.py
logging/: loggers.json
logging/logs/: log.jsonl
loggle/: __init__.py  logger.py  loggle.py
loggle/collections/: __init__.py
loggle/configuration/: configuration.py
loggle/filter/collections/: filters.py
loggle/filter/lib/: schemas.py
loggle/filters/: __init__.py  error_filter.py  filters.py
loggle/filters/lib/: consts.py  filter_factory.py  schemas.py
loggle/formatter/lib/: schemas.py
loggle/formatters/: __init__.py  formatters.py  json_formatter.py  standard_formatter.py
loggle/formatters/lib/: consts.py  formatter_factory.py  schemas.py
loggle/handler/: __init__.py  queue_handler.py
loggle/handler/collections/: __init__.py  handlers.py
loggle/handler/lib/: __init__.py  consts.py  schemas.py  types.py
loggle/handlers/: __init__.py  handlers.py  queue_handler.py
loggle/handlers/lib/: consts.py  schemas.py  types.py
loggle/lib/: consts.py  schemas.py
loggle/log/: __init__.py  log.py
loggle/logger/: logger.py
loggle/logger/collections/: __init__.py  logger_names.py  loggers.py
loggle/logger/lib/: consts.py  schemas.py
loggle/loggers/: __init__.py  loggers.py
loggle/loggers/lib/: consts.py  schemas.py
src/loggle/: __init__.py
src/loggle/collections/: __init__.py
src/loggle/configuration/: __init__.py  configuration.py
(+19 files in other folders)
